--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         </nav>
    </header>
    <header>
-    <div id="ww_9395c1ecc7d37" v='1.3' loc='id' a='{"t":"responsive","lang":"es","sl_lpl":1,"ids":["wl3321"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"#000000","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","cl_odd":"#FFFFFF17"}'>Weather Data Source: <a href="https://sharpweather.com/es/tiempo_santa_fe/mañana/" id="ww_9395c1ecc7d37_u" target="_blank">tiempo mañana en Santa Fe</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_9395c1ecc7d37"></script>
+  
    </header>
    <main>        
     <iframe src="https://streamradio.ddns.net/public/stream_radio/embed" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 150px; border: 0;"></iframe>
    </main>
-   <article>
-    
-   </article>
+    <footer class="footer">
+    <div id="ww_9395c1ecc7d37" v='1.3' loc='id' a='{"t":"responsive","lang":"es","sl_lpl":1,"ids":["wl3321"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"#000000","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","cl_odd":"#FFFFFF17"}'>Weather Data Source: <a href="https://sharpweather.com/es/tiempo_santa_fe/mañana/" id="ww_9395c1ecc7d37_u" target="_blank">tiempo mañana en Santa Fe</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_9395c1ecc7d37"></script>
+   </footer>
 </body>
 
 </html>
