--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="estilos.css">
     <script src="https://kit.fontawesome.com/a9e43fc4b9.js" crossorigin="anonymous"></script>
     <script defer src="index.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <body>
     <header class="header">
