--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </nav>
    </header>
    
-   <main>        
-    <iframe src="https://streamradio.ddns.net/public/streamradio/embed" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 130px; border: 0;"></iframe>
+   <main> 
+    <iframe src="https://streamradio.ddns.net/public/streamradio/embed?theme=dark" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 120px; border: 0;"></iframe>
    </main>
 
    <main>
