--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    </header>
    
    <main>
-    <iframe src="https://streamradio.ddns.net/public/stream_radio/embed?theme=dark" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 150px; border: 0;"></iframe>   
+    <iframe src="https://streamradio.ddns.net/public/stream_radio/embed?theme=dark" frameborder="0" allowtransparency="true" style="width: 100%; max-height: 120px; border: 0;"></iframe>   
    </main>
 
    <main>
