--- a/historial.html
+++ b/historial.html
@@ -20,13 +20,12 @@
                     <li class="nav-menu-item"><a href="index.html" class="nav-menu-link nav-link nav-menu-link_active">Player</a></li>
                     <li class="nav-menu-item"><a href="historial.html" class="nav-menu-link nav-link">Historial</a></li>
                     <li class="nav-menu-item"><a href="solicitar.html" class="nav-menu-link nav-link">Solicitar</a></li>
-                    <li class="nav-menu-item"><a href="demanda.html" class="nav-menu-link nav-link ">Demanda</a></li>
-                    <li class="nav-menu-item"><a href="https://streamradio.ddns.net/public/stream_radio/podcasts" class="nav-menu-link nav-link">Podcast</a></li>
+                   
                 </ul>
         </nav>
    </header>
    <main>        
-    <iframe src="https://streamradio.ddns.net/public/stream_radio/history" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 600px; border: 0;"></iframe>
+    <iframe src="https://streamradio.ddns.net/public/streamradio/history?theme=dark" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 300px; border: 0;"></iframe>
    </main>
 </body>
 </html>
